--- a/src/sass/fau-theme-print.scss
+++ b/src/sass/fau-theme-print.scss
@@ -21,11 +21,8 @@
 
 
 
-
-
-
-
 // Structure
+
 // Layout - Rahmen, grundlegende Struktur gesamte Website
 @import "structure/layout/layout";
 // Header Region
@@ -43,12 +40,6 @@
 
 
 
-
-
-
-
-
-
 // Element Styles
 @import "elements/elements";
 
@@ -57,6 +48,8 @@
 
 // Printer Adjustments
 @import "printer";
+
+
 
 /* Allgemein ausblenden ***********************************************************************************************/
 
@@ -68,6 +61,7 @@
 .news-more-links,
 .more-posts,
 .continue,
+.hide-in-print,
 /*.sidebar-single,
 .sidebar-subnav,*/
 #meta,
@@ -82,23 +76,28 @@ a[aria-hidden="true"] {
 }
 
 h1 {
-    page-break-before: always;
+    page-break-before: always !important;
 }
 
 h1, h2, h3, h4, h5 {
-    page-break-after: avoid;
+    page-break-after: avoid !important;
 }
 
 table, figure, img {
-    display: block;
-    position: static;
-    page-break-before: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
-    page-break-after: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
-    page-break-inside: avoid; /* or 'auto' */
+    display: block !important;
+    position: static !important;
+    page-break-before: auto !important; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
+    page-break-after: auto !important; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
+    page-break-inside: avoid !important; /* or 'auto' */
 }
 
 img {
-    display: block;
+    max-width: 500px !important;
+    border: 0 !important;
+}
+
+blockquote, ul {
+    margin: 0 !important;
 }
 
 /* Header *************************************************************************************************************/
@@ -152,6 +151,23 @@ body:not(.js-enabled) a:after {
     display: none;
 }
 
+main a,
+.entry-content a,
+.portalpage-content a,
+.content-inline a {
+    box-shadow: none !important;
+    transition: none !important;
+}
+
+.fontawesome-icon-list {
+    display: flex !important;
+    flex-wrap: wrap !important;
+
+    & .fa-hover.col-md-3.col-sm-4 {
+        width: 25% !important;
+    }
+}
+
 .tw-linkref {
 
     &:before {
@@ -174,23 +190,24 @@ body:not(.js-enabled) a:after {
 /* Hero Slider ********************************************************************************************************/
 
 #hero {
-    background-color: transparent;
+    overflow: hidden !important;
+
+    & * {
+        position: static !important;
+    }
 }
 
 #hero-slides {
-    background-color: transparent;
-    box-shadow: none;
+    display: block !important;
+    height: auto !important;
+    max-height: none !important;
+    //background-color: transparent !important;
+    box-shadow: none !important;
 }
 
 #hero-slides .slider-controls {
     display: none !important;
 }
-
-/*#hero-slides .item {
-    width: 23% !important;
-    margin: 1% !important;
-}*/
-
 
 #hero-slides .item p,
 #hero-slides .item header {
@@ -205,7 +222,32 @@ body:not(.js-enabled) a:after {
     opacity: 1 !important;
 }
 
-/* Galerie ************************************************************************************************************/
+/* Slider *************************************************************************************************************/
+
+.imagelink.dots {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.imagelink .slick-item {
+    overflow: visible !important;
+    position: relative !important;
+
+    & .tw-linkref {
+        position: absolute !important;
+        top: auto !important;
+        bottom: 0 !important;
+        left: 0 !important;
+        background-color: #ffffff !important;
+    }
+}
+
+.imagelink .slick-prev.slick-arrow,
+.imagelink .slick-next.slick-arrow {
+    display: none !important;
+}
+
+/* Bildergalerie ******************************************************************************************************/
 
 .image-gallery .gallery-slick .slick-prev,
 .image-gallery .gallery-slick .slick-next,
@@ -238,13 +280,17 @@ body:not(.js-enabled) a:after {
     margin: 1% !important;
 }
 
-/* Youtube Videos ************************************************************************************************************/
+/* YouTube Videos *****************************************************************************************************/
+
+.oembed > iframe {
+    display: none;
+}
 
 .tw-iframe-footnote {
     display: block;
+    margin: 1rem 0 2rem 0;
 }
 
 .tw-iframe-image {
     display: block;
 }
-
