--- a/src/sass/tw/tw.scss
+++ b/src/sass/tw/tw.scss
@@ -1,4 +1,5 @@
-// Hide special print elements for @media screen.
+// Hide special print elements for @media screen
+
 .tw-linklist {
     display: none;
 }
