- FAU print-css

--- a/print.css
+++ b/print.css
@@ -16709,7 +16709,7 @@ footer .socialmedia {
   }
 }
 /* Allgemein ausblenden ***********************************************************************************************/
-/*.header-menu,*/
+.header-menu,
 .orga-breadcrumb,
 .meta-footer,
 .top-link,
@@ -16747,7 +16747,6 @@ table, figure, img {
 }
 
 img {
-  max-width: 500px !important;
   border: 0 !important;
 }
 
@@ -16762,6 +16761,7 @@ blockquote, ul {
 
 #headerwrapper {
   margin: 0;
+  box-shadow: none !important;
 }
 #headerwrapper #header .branding {
   width: 100%;
@@ -16832,6 +16832,7 @@ main a,
 /* Hero Slider ********************************************************************************************************/
 #hero {
   overflow: hidden !important;
+  background-color: transparent !important;
 }
 #hero * {
   position: static !important;
@@ -16841,6 +16842,7 @@ main a,
   display: block !important;
   height: auto !important;
   max-height: none !important;
+  background-color: transparent !important;
   box-shadow: none !important;
 }
 
@@ -16848,16 +16850,51 @@ main a,
   display: none !important;
 }
 
+#hero-slides .item {
+  height: auto !important;
+  margin-bottom: 3rem !important;
+}
+
 #hero-slides .item p,
 #hero-slides .item header {
-  color: white !important;
-  background-color: black !important;
+  color: black !important;
+  background-color: #ffffff !important;
   opacity: 1 !important;
 }
 
+#hero-slides .slick-slide {
+  height: auto !important;
+  opacity: 1 !important;
+}
+
+#hero-slides .item img {
+  width: auto !important;
+  height: 10rem !important;
+  min-width: auto !important;
+  min-height: auto !important;
+  margin-left: 3rem !important;
+  transform: none !important;
+}
+
+#hero-slides .item .credits {
+  margin: 0.5rem 1rem 0.5rem 3rem !important;
+  opacity: 1 !important;
+}
+
+#hero-slides .item .hero-slide-text {
+  top: auto !important;
+  bottom: auto !important;
+  margin: 0.5rem 1rem 0.5rem 0 !important;
+  opacity: 1 !important;
+}
+
+#hero-slides .item .container {
+  margin-left: 2rem !important;
+}
+
 #hero-slides .item a {
-  color: white !important;
-  background-color: black !important;
+  color: black !important;
+  background-color: #ffffff !important;
   opacity: 1 !important;
 }
 
@@ -16881,6 +16918,16 @@ main a,
 
 .imagelink .slick-prev.slick-arrow,
 .imagelink .slick-next.slick-arrow {
+  display: none !important;
+}
+
+.imagelink .slick-track {
+  width: auto !important;
+  transform: none !important;
+  opacity: 1 !important;
+}
+
+.imagelink .slick-slide.slick-cloned {
   display: none !important;
 }
 
