- FAU print-css: Hochformat/Querformat bei Druck wählbar machen.

--- a/print.css
+++ b/print.css
@@ -15995,6 +15995,7 @@ a[aria-hidden=true] {
 
 /* Allgemein **********************************************************************************************************/
 @page {
+  size: unset;
   margin: 2cm;
 }
 h1 {
