--- a/src/sass/fau-theme-print.scss
+++ b/src/sass/fau-theme-print.scss
@@ -71,6 +71,7 @@ a[aria-hidden="true"] {
 /* Allgemein **********************************************************************************************************/
 
 @page {
+    size: unset;
     margin: 2cm;
 }
 
