--- a/src/sass/fau-theme-print.scss
+++ b/src/sass/fau-theme-print.scss
@@ -207,15 +207,17 @@ main a,
 
     & li {
         padding: 0.5rem 0;
-        border-bottom: 1px solid #999;
+        border-top: 1px solid #999;
 
         &:first-child {
-            padding-top: 1rem;
+            margin-top: 1rem;
         }
     }
 
     & svg {
-        margin: 0 0.4rem -0.3rem 0.1rem;
+        display: inline-block;
+        margin: 0 0.4rem 0 0.1rem;
+        vertical-align: middle;
     }
 }
 
