--- a/src/sass/fau-theme-print.scss
+++ b/src/sass/fau-theme-print.scss
@@ -30,10 +30,6 @@ a[aria-hidden="true"] {
     margin: 2cm 2cm 2cm 2.5cm !important;
 }
 
-h1 {
-    page-break-before: always !important;
-}
-
 h1, h2, h3, h4, h5, h6 {
     page-break-after: avoid !important;
     page-break-inside: avoid !important;
@@ -66,6 +62,17 @@ abbr[title]:after {
 .content-row .entry-content {
     max-width: 100% !important;
     padding-left: 0 !important;
+}
+
+.content-container,
+.inline-box .content-inline {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+.subtitle {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 .table-wrapper {
@@ -197,6 +204,10 @@ main a,
     }
 }
 
+#hero .breadcrumbs span {
+    padding: 0 !important;
+}
+
 /* Hero Slider ********************************************************************************************************/
 
 #hero {
@@ -288,16 +299,12 @@ main a,
     opacity: 1 !important;
     transform: unset;
 
-    & .slider-titel {
+    & .slider-titel header {
+        margin: 0;
         padding: 0;
-
-        & header {
-            margin: 0;
-            padding: 0;
-        }
     }
 
-    & .slider-text {
+    & .slider-text p {
         padding: 0;
     }
 }
@@ -310,7 +317,8 @@ main a,
 
 .container {
     width: auto !important;
-    // padding: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
 
 /* Slider *************************************************************************************************************/
