Add display none for siteimprove login button

--- a/src/sass/fau-theme-print.scss
+++ b/src/sass/fau-theme-print.scss
@@ -419,3 +419,10 @@ main a,
 .tw-iframe-image {
     display: block;
 }
+
+/* Plugins **********************************************************************************************************/
+
+/* Siteimprove Login Button */
+.si-toggle-container {
+     display: none !important;
+}
