#1061 und Prüfung der Bilder bei Portalmenus

--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -52,6 +52,10 @@
 // Social Share 
 // (not used yet)  @import "social-share";
 
+// Mimetype Link Icons
+@import "mimetype-link-icons";
+
+
 // Everything else, coming from Plugins
 @import "plugin-misc";
 
