--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.42-3
+Version: 2.0.42-4
 Requires at least: 5.8
 Tested up to: 6.0
 Requires PHP: 7.4
@@ -16445,6 +16445,16 @@ and open the template in the editor.
   -webkit-text-decoration-color: currentcolor;
           text-decoration-color: currentcolor;
   box-shadow: none;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/* CSS Definitionen für das Plugin MimeTypes Link Icons
+/* https://wordpress.org/plugins/mimetypes-link-icons
+/*-----------------------------------------------------------------------------------*/
+.widget li a.mtli_attachment {
+  background-position: right !important;
+  padding-left: 0 !important;
+  padding-right: 20px !important;
 }
 
 /*
